--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,4 +1,5 @@
 @import '../styles/variables.scss';
+@import '../styles/reset.scss';
 @import '../styles/light-theme.scss';
 @import '../styles/dark-theme.scss';
 
