--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,7 @@
 // app
-$theme-gradient: linear-gradient(72deg, #291e95, #cc007a);
+$theme-color1: #291e95;
+$theme-color2: #cc007a;
+$theme-gradient: linear-gradient(72deg, $theme-color1, $theme-color2);
 $top-header-text-color: #fff;
 
 /**
@@ -17,6 +19,9 @@ $light-link-color: #000080;
 $dark-gray: #333;
 $middle-gray: #7d7d7d;
 $light-gray: #aaa;
+$light-white: #ffffff;
+$middle-white: #eeeeee;
+$dark-white: #bdbdbd;
 
 // blog-templates
 $navigator-text-color: #cc007a;
