--- a/src/styles/light-theme.scss
+++ b/src/styles/light-theme.scss
@@ -62,6 +62,21 @@ body.light {
     }
   }
 
+  .post-toc {
+    li {
+      color: $dark-gray;
+      opacity: 0.3;
+    }
+
+    li:hover {
+      opacity: 0.5;
+    }
+
+    li.active {
+      opacity: 1;
+    }
+  }
+
   // post
   .navigator {
     a {
