modify style for thumbnail-item, blog-post

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -3,10 +3,13 @@ body {
 }
 
 h2 {
-  margin-top: 100px;
+  margin-top: 6.8rem;
 }
 
-h3,
+h3 {
+  margin-top: 3.3rem;
+}
+
 h4,
 h5,
 h6 {
@@ -14,7 +17,7 @@ h6 {
 }
 
 p {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 strong {
