--- a/src/components/thumbnail-item/index.scss
+++ b/src/components/thumbnail-item/index.scss
@@ -2,16 +2,41 @@
 
 .thumbnail {
   display: block;
-  margin-bottom: 12px;
-  padding: 4px;
-  padding-bottom: 12px;
-  box-shadow: none;
+  margin: 15px 0;
+  padding: 20px 25px;
+  border: 1px solid $light-white;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.11);
+  -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.11);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.11);
   transition: text-shadow 0.3s, opacity 0.4s;
   opacity: 0;
 
+  .title {
+    .category {
+      display: block;
+      margin-bottom: 3px;
+      color: black;
+      opacity: 0.35;
+    }
+
+    h3 {
+      font-size: 1.75rem;
+      margin: 0;
+    }
+  }
+
   p {
     font-size: 90%;
-    line-height: 1.4;
+    line-height: 1.6;
+    margin: 0;
+  }
+
+  time {
+    display: block;
+    margin: 0.8rem 0;
+    color: $theme-color1;
+    font-weight: 500;
   }
 }
 
