modify theme style and post-farewell text

--- a/src/styles/dark-theme.scss
+++ b/src/styles/dark-theme.scss
@@ -45,6 +45,12 @@ body.dark {
   }
 
   .thumbnail {
+    .category {
+      color: white;
+    }
+    time {
+      color: $dark-link-color;
+    }
     h3 {
       color: $dark-light-font-color;
     }
