modify post-toc component

--- a/src/components/post-toc/index.scss
+++ b/src/components/post-toc/index.scss
@@ -10,6 +10,8 @@
   position: absolute;
   left: 10%;
   padding-top: 2.4375rem;
+  width: 250px;
+  word-break: keep-all;
 }
 
 .post-toc-container.fixed {
